--- a/reloj2/css/style2.css
+++ b/reloj2/css/style2.css
@@ -15,7 +15,7 @@ body{
 #time{
    display: flex;
    gap:40px;
-   color: #fff;
+   color: #ffffff;
 }
 #time div span{
     position: absolute;
@@ -45,7 +45,7 @@ circle{
     height: 100%;
     fill: transparent;
     fill-opacity: 0.75;
-    stroke: #000;
+    stroke: #000000;
     stroke-width: 1;
     stroke-width: 4;
     transform: translate(5px, 5px);
