--- a/navidad/css/navidad.css
+++ b/navidad/css/navidad.css
@@ -1,21 +1,154 @@
 *{
     margin: 0;
-    pad: 0;
+    padding: 0;
     box-sizing: border-box;
+    background-color: rgba(83,200,220,255);
 }
 body{
-    width: 150px;
-    height: 35px;
-    background-color: rgb(3, 200, 220);
-    border-radius: 1vh;
-    border: 0.2rem solid rgb(6, 106, 198) ;
-    margin-bottom: 2rem;
-    position: fixed;
-    color: aliceblue;
     align-items: center;
     justify-content: center;
     display: flex;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    min-height: 100vh;
+}
+
+#tituloantes {
+    color: red;
+    font-size: 30px;
+    position: absolute;
+    left: 320px;
+    top: 200px;
+}
+
+#titulo {
+    color: red;
+    font-size: 35px;
+    position: absolute;
+    left: 350px;
+    top: 220px;
+}
+
+
+.campo {
+    box-shadow: 3px 3px 3px 3px rgb(33, 85, 182);
+    margin: 1px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 15vh;
+    height: 5vh;
+    border-radius: 3rem;
+    font-size: 2rem;
+    border-color: blue;
+}
+
+
+.papaOff {
+    background: no-repeat;
+    width: 600px;
+    height: 600px;
+    background-image: url(../img/imgnavi.png);
+    position: absolute;
+    top: 100px;
+    right: 90px;
+}
+
+.papaOff.on{
+    background: no-repeat;
+    width: 600px;
+    height: 600px;
+    background-image: url(../img/giftnavi.gif);
+    position: absolute;
+    top: 100px;
+    right: 90px;
+}
+
+#play{
+    background-color:  rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    width: 100px;
+    height: 45px;
+    text-align: center;
+    justify-content: center;
+    border-radius: 5rem;
+    font-size: 2rem;
+    cursor: pointer;
+    position: absolute;
+    left: 110px;
+    
+}
+#pause{ 
+    display: flex;
+    background-color:  rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    width: 100px;
+    height: 45px;
+    text-align: center;
+    justify-content: center;
+    border-radius: 5rem;
+    font-size: 2rem;
+    cursor: pointer;
+    position: absolute;
+    left: 250px;
+}
+
+#play.on{
+    color: aliceblue;
+    position: fixed;
+    top: 60vh;
+    left: 27vh;
+    width: 15vh;
+    height: 5vh;
+    border-radius: 3rem;
+    font-size: 2rem;
+    cursor: pointer;
+    background-color: rgb(255, 0, 0);
+}
+#pause.on{ 
+    color: aliceblue;
+    position: fixed;
+    top: 60vh;
+    left: 44vh;
+    width: 15vh;
+    height: 5vh;
+    border-radius: 3rem;
+    font-size: 2rem;
+    cursor: pointer;
+    background-color: rgb(255, 0, 0);
+}
+
+
+
+.estilo{
+    position: absolute;
+    left: 90px;
+    top: 10px;
+    left: 250px;
+    top: 300px;
+}
+
+#pause:hover.on {
+    background-color: rgb(0, 0, 0);
+   
+}
+
+#play:hover.on {
+    background-color: black;
+     
+}
+.navidad {
+    display: flex;
+    
+}
+.titulos {
+    display: flex;
+    padding: 5px 5px 5px;
+    color: white;
+    font-size: 30px;
+}
+
+.titulos span {
+    margin: 2px 40px 50px;
+
 }
 
 
